--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,4 +1,3 @@
-
 name: Build and Push Docker Image
 
 on:
@@ -17,16 +16,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Log in to Google Container Registry
-      env:
-        GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
-        GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
-      run: |
-        echo "${GCP_SA_KEY}" | docker login -u _json_key --password-stdin https://gcr.io
+    - name: Set up Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@master
+      with:
+        service_account_key: ${{ secrets.GCP_SA_KEY }}
+        project_id: ${{ secrets.GCP_PROJECT }}
+
+    - name: Configure Docker to use the gcloud command-line tool as a credential helper
+      run: gcloud auth configure-docker
 
     - name: Build and push Docker image
-      env:
-        GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
       run: |
-        docker build . -t gcr.io/${{ env.GCP_PROJECT }}/docker-repo/my-app:${{ github.sha }}
-        docker push gcr.io/${{ env.GCP_PROJECT }}/docker-repo/my-app:${{ github.sha }}
+        docker build . -t gcr.io/${{ secrets.GCP_PROJECT }}/docker-repo/my-app:${{ github.sha }}
+        docker push gcr.io/${{ secrets.GCP_PROJECT }}/docker-repo/my-app:${{ github.sha }}
