--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -17,13 +17,14 @@ jobs:
       uses: docker/setup-buildx-action@v1
 
     - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0  # Updated version
+      uses: google-github-actions/setup-gcloud@v0.2.0
       with:
         service_account_key: ${{ secrets.GCP_SA_KEY }}
         project_id: ${{ secrets.GCP_PROJECT }}
-
+    
     - name: Configure Docker to use the gcloud command-line tool as a credential helper
-      run: gcloud auth configure-docker
+      run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+
 
     - name: Build and push Docker image
       run: |
