--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Build and push Docker image
       run: |
         docker build . -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
-        docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
+        docker push europe-west2-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
