--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,5 +28,5 @@ jobs:
 
     - name: Build and push Docker image
       run: |
-        docker build . -t us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
+        docker build . -t europe-west2-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
         docker push europe-west2-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
