--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,17 +16,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
 
-    - name: Set up Google Cloud SDK
-      uses: google-github-actions/setup-gcloud@v0.2.0
-      with:
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        project_id: ${{ secrets.GCP_PROJECT }}
-    
-    - name: Configure Docker to use the gcloud command-line tool as a credential helper
-      run: gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
-
+    - name: Log in to Google Container Registry
+      env:
+        GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
+        GCP_SA_KEY: ${{ secrets.GCP_SA_KEY }}
+      run: |
+        echo "${GCP_SA_KEY}" | docker login -u _json_key --password-stdin https://gcr.io
 
     - name: Build and push Docker image
+      env:
+        GCP_PROJECT: ${{ secrets.GCP_PROJECT }}
       run: |
-        docker build . -t europe-west2-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
-        docker push europe-west2-docker.pkg.dev/${{ secrets.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
+        docker build . -t gcr.io/${{ env.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
+        docker push gcr.io/${{ env.GCP_PROJECT }}/edf-interview/my-app:${{ github.sha }}
